<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightbrown"
    tools:context=".Log_In">

    <ImageView
        android:layout_width="86dp"
        android:layout_height="117dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="500dp"
        android:contentDescription="TODO"
        android:src="@drawable/login" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:text="yy@gmail.com"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_password"
            android:text= "123456789"
            android:textSize="20sp"
            android:maxLength="11"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:imeActionId="111"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black" />


        <!-- Link to Sign UpScreen -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:fontFamily="@font/typewriter2"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="15dp" />


    </LinearLayout>

    <Button
        android:background="@android:color/white"
        android:id = "@+id/LogIn_button"
        android:layout_centerHorizontal="true"
        android:text="@string/LogIn"
        android:textColor="@android:color/black"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textStyle="bold"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</RelativeLayout>