<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pastegreyl"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="111dp"
        android:layout_height="152dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:contentDescription="TODO"
        android:gravity="center"
        android:src="@drawable/kitchenlogo"/>

    <ImageView
        android:layout_width="331dp"
        android:layout_height="277dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:contentDescription="TODO"
        android:gravity="center"
        android:src="@drawable/kitchenword" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id='@+id/txtSlogan'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/typewriter2"
            android:layout_marginTop="200dp"
            android:text="@string/slogan"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#010b13" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="@drawable/button_selector"
            android:id="@+id/SignUp_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:text="@string/SignUp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <Button
            android:background="@drawable/button_activate"
            android:id = "@+id/LogIn_button"
            android:text="@string/LogIn"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            />



    </LinearLayout>

</RelativeLayout>