<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chiffon"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="117dp"
        android:layout_height="142dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="TODO"
        android:src="@drawable/signup" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="Name"
            android:text= ""
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:text= ""
            android:textSize="20sp"
            android:maxLength="11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:imeActionId="111"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black" />


        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="15dp" />


    </LinearLayout>

    <Button
        android:background="@android:color/white"
        android:id = "@+id/SignUp_button"
        android:layout_centerHorizontal="true"
        android:text="@string/SignUp"
        android:textColor="@android:color/black"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>